Bug 913761 - Something is wrong when transferring MessagePort object via MessageChannel. r=smaug CLOSED TREE